3.10.0 - 25-Sep-2017
====================
- Added a complete graph for IPMI sensors using the 'ipmitool' command.
  	(suggested by Frank Dijcks, fd AT fdsystems.nl)
- Added a complete graph for MongoDB. [#38]
- Added a back button in the upper-left corner to easily go to the main page
  in browsers with fullscreen mode. The button will appear only if the new
  option called 'enable_back_button' is enabled (disabled by default).
- Improved the 'system.pm' graph with more detailed information about processes
  (sleeping, waiting I/O, zombie, stopped, paging and running). It also
  includes two new graphs to show entropy and uptime.
- Changed the way how scales the memory graph in 'system.pm', now the units are
  in bytes, so the y-axis will scale accordingly.
- Changed to be more thickness the lines of Greylisting graph in 'mail.pm'.
- Changed the colors of the main graph in 'ftp.pm'.
- Introduced the option 'enable_parallelizing' in order to speed up the graph
  generation in multi-core systems.
- Added a new option in 'port.rrd' to enable/disable background red color for
  each port monitored. [#182]
- Added to be able to change the real names in the Voltage graph. [#183]
- From now on the perl-HTTP-Server-Simple module only is loaded if the HTTP
  built-in is enabled. This will permit to separate the HTTP built-in in a
  different package.
- Added French translation to monthly reports.
        (thanks to Sylvain Gomez, sylvaingomez AT free.fr)
- Added support of Postgrey (Postfix Greylisting) in 'mail.pm'. [#102]
        (thanks to Malte Kubat, M.Kubat AT csb-it.de)
- Updated to 4.01 the HTML DOCTYPE declarations.
- Added more precision to the values in 'gensens.pm'.
- Added string encoding to avoid the message 'Wide character in print at
  ./monitorix.cgi line ...'. [#186]
- Added to force a standard locale in 'port.pm'. in order to be able for
  Monitorix to read the output of system commands (netstat, ...). [#186]