@@ -124,6 +124,7 @@ secure_log_date_format = %b %e
 # SYSTEM graph
 # -----------------------------------------------------------------------------
 <system>
+	graph_mode = real
 	<alerts>
 		loadavg_enabled = n
 		loadavg_timeintvl = 3600
